# synapse

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  Kconfig.projbuild  LICENSE  README.md  _2home_2runner_2work_2synapse-esp_2synapse-esp_2components_2core_2include_2synapse_utils_8h-example.html  _2home_2runner_2work_2synapse_2synapse_2components_2core_2include_2synapse_utils_8h-example.html  alarms__manager_8c.html  alarms__manager_8c.js  alarms__manager_8c__incl.map  alarms__manager_8c__incl.md5  alarms__manager_8h.html  alarms__manager_8h.js  alarms__manager_8h__dep__incl.map  alarms__manager_8h__dep__incl.md5  alarms__manager_8h__incl.map  alarms__manager_8h__incl.md5  alarms__manager_8h_source.html  alarms__manager__interface_8h.html  alarms__manager__interface_8h.js  alarms__manager__interface_8h__dep__incl.map  alarms__manager__interface_8h__dep__incl.md5  alarms__manager__interface_8h__incl.map  alarms__manager__interface_8h__incl.md5  alarms__manager__interface_8h_source.html  annotated.html  annotated_dup.js  base__module_8h.html  base__module_8h.js  base__module_8h__dep__incl.map  base__module_8h__dep__incl.md5  base__module_8h__incl.map  base__module_8h__incl.md5  base__module_8h_source.html  ble__prov__interface_8h.html  ble__prov__interface_8h.js  ble__prov__interface_8h__dep__incl.map  (+2991 more)
cli/: README.md  (+2 more)
components/core/: CMakeLists.txt  Kconfig  Kconfig.projbuild  collect_configs.cmake  collect_modules.cmake  collect_mqtt_topics.cmake  config_manager.c  embedded_configs.h.in  event_bus.c  event_data_wrapper.c  event_payloads.c  generate_mqtt_topics.py  generated_module_factory.c.in  generated_module_factory.h.in  idf_component.yml  module_factory.c  module_helpers.c  module_registry.c  mqtt_topics_generated.h.in  resource_manager.c  service_locator.c  system_manager.c  validate_configs.cmake
components/core/include/: base_module.h  config_manager.h  event_bus.h  event_data_wrapper.h  event_payloads.h  framework_config.h  framework_events.h  generated_module_factory.h  logging.h  module_factory.h  module_helpers.h  module_registry.h  promise_manager.h  promise_manager_internal.h  resource_manager.h  service_locator.h  service_status.h  service_types.h  synapse.h  synapse_assert.h  synapse_utils.h  system_event_ids.h  system_manager.h  task_pool_manager.h  task_pool_manager_internal.h
components/core/src/: config_manager.c  event_bus.c  event_data_wrapper.c  event_payloads.c  module_factory.c  module_helpers.c  module_registry.c  promise_manager.c  resource_manager.c  service_locator.c  synapse_utils.c  system_manager.c  task_pool_manager.c
components/modules/communications/mqtt_manager/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/communications/mqtt_manager/include/: mqtt_manager.h
components/modules/communications/mqtt_manager/src/: mqtt_manager.c
components/modules/communications/wifi_manager/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/communications/wifi_manager/include/: wifi_manager.h
components/modules/communications/wifi_manager/src/: wifi_manager.c  wifi_manager_api.c  wifi_manager_cmd.c  wifi_manager_events.c  wifi_manager_internal.h  wifi_manager_ui.c
components/modules/diagnostics/self_test_manager/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/diagnostics/self_test_manager/include/: self_test_manager.h
components/modules/diagnostics/self_test_manager/src/: self_test_manager.c
components/modules/displays/oled_display/: CMakeLists.txt  Kconfig  module.json
components/modules/displays/oled_display/include/: oled_display.h
components/modules/displays/ssd1306_driver/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/displays/ssd1306_oled_display/: CMakeLists.txt  Kconfig  README.md  config.json  module.json
components/modules/drivers/button_input/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/drivers/i2c_bus/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/drivers/mcp23017_io_expander/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/drivers/rotary_encoder_input/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/drivers/sn74hc595n_writer/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/drivers/spi_bus/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/provisioning/ble_provisioning/: CMakeLists.txt  Kconfig  README.md  config.json  module.json
components/modules/security/security_status_reporter/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/sensors/time_of_flight_sensor/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/storage/storage_manager/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/system/alarms_manager/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/system/time_sync/: CMakeLists.txt  Kconfig  README.md  config.json  module.json  schema.json
components/modules/testing/led_blinker/: CMakeLists.txt  Kconfig  module.json
components/modules/testing/sensor_simulator/: CMakeLists.txt  Kconfig  README.md  config.json  module.json
components/modules/testing/timer_test_module/: CMakeLists.txt  Kconfig  README.md  config.json  module.json
components/modules/utilities/command_router/: CMakeLists.txt  Kconfig  README.md  module.json
components/modules/utilities/rgb_led_indicator/: CMakeLists.txt  Kconfig  README.md  config.json  module.json
components/modules/utillities/system_timer/: CMakeLists.txt  README.md  config.json  schema.json
components/modules/utillities/ui_manager/: CMakeLists.txt  Kconfig  README.md  module.json  schema.json
(+824 files in other folders)
